solved overflow issue

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -25,8 +25,10 @@ html {
 
 // global styles
 
-section,
-header,
+section {
+  padding: 2rem 9%;
+}
+
 footer {
   padding: 2rem 9%;
 }
@@ -165,21 +167,22 @@ header {
   flex-wrap: wrap;
 
   .content {
-    flex: 1 1 40rem;
+    flex: 1 1 30rem;
     p {
       color: $light-color;
       letter-spacing: 0.1rem;
       margin: 0.5rem 0;
       // text-align: justify;
       line-height: 1.5;
-      font-size: 1.5rem;
+      font-size: 1.4rem;
     }
   }
   .image {
-    flex: 1 1 40rem;
+    flex: 1 1 30rem;
 
     img {
       width: 100%;
+      height: 100%;
     }
   }
 }
@@ -212,6 +215,7 @@ header {
       // gap: 4rem;
       // font-size: 8rem;
       @include grid(15rem);
+      overflow-x: hidden;
 
       .box {
         height: 15rem;
@@ -256,8 +260,12 @@ header {
   html {
     font-size: 55%;
   }
-  section,
-  header,
+  section {
+    padding: 2rem;
+  }
+  header {
+    padding: 2rem;
+  }
   footer {
     padding: 2rem;
   }
